--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
         <p id="result"></p>
     </body>
     <script>
-        let waid;
+        let waxid;
         let nonce;
 
         async function login() {
