--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
         <button id="mine" onclick="mine()">AW mine</button>
         <button id="claim" onclick="claim()" disabled>AW claim</button>
         <p>Delay <span id="delay"></span> s !</p>
+        <p>Next claim in <span id="next-claim">NaN</span>s.</p>
         <p id="result"></p>
     </body>
     <script>
@@ -139,6 +140,7 @@
                     document.querySelector('#result').innerText = '[Finished] - Error - Mine to soon'
                     document.getElementById("mine").disabled = false
                     document.getElementById("claim").disabled = false
+                    document.getElementById("next-claim").innerText = '' + remains
                     return
                 }
 
