--- a/public/index.html
+++ b/public/index.html
@@ -137,7 +137,7 @@
                 document.querySelector('#delay').innerText = '' + delay
 
                 if (remains > 0) {
-                    document.querySelector('#result').innerText = '[Finished] - Error - Mine to soon'
+                    document.querySelector('#result').innerText = '[Finished] - Error - Mine too soon'
                     document.getElementById("mine").disabled = false
                     document.getElementById("claim").disabled = false
                     document.getElementById("next-claim").innerText = '' + remains
