--- a/public/index.html
+++ b/public/index.html
@@ -172,7 +172,7 @@
                     }
                     catch (e) {
                         if (e === -1) {
-                            document.querySelector('#result').innerText = '[Finished] - Error - Account Invalid'
+                            document.querySelector('#result').innerText = '[Finished] - Error - Invalid Account'
                             document.getElementById("mine").disabled = false
                             document.getElementById("claim").disabled = false
                             return
