--- a/public/index.html
+++ b/public/index.html
@@ -74,7 +74,7 @@
             const tx = await getLastTx();
             new Promise(r => r(GenerateNonce(waxid, waxid, 0, tx)))
                 .then(r => {
-                    nonce = GenerateNonce(waxid, waxid, minerInfo.difficulty, minerInfo.last_mine_tx).rand_str
+                    nonce = r.rand_str
                     document.querySelector("#nonce").innerText = nonce + ""
                     console.log('nonce', nonce)
                     document.getElementById("claim").disabled = false;
@@ -246,6 +246,7 @@
 
         function claim() {
             document.getElementById("claim").disabled = true
+            document.querySelector('#result').innerText = ''
             const actions = [{
                 account: "m.federation",
                 name: "mine",
