--- a/public/limitlesswax.html
+++ b/public/limitlesswax.html
@@ -36,6 +36,10 @@
             rpcEndpoint = ep;
         }
 
+        function setNonce(n) {
+            nonce = n;
+        }
+
         function createWax(_boostAccount = null, _privateKey = null) {
             const params = {
                 rpcEndpoint: rpcEndpoint,
