--- a/public/limitlesswax.html
+++ b/public/limitlesswax.html
@@ -66,8 +66,7 @@
 
             // create wax instance
             // wax = new waxjs.WaxJS(params);
-            const ep = ["https://api.waxsweden.org", "https://wax.greymass.com"][Math.floor(Math.random() * 2)];
-            wax =  new S.WaxJS("https://api.waxsweden.org",void 0,void 0,!1,D);
+            wax =  new S.WaxJS("https://wax.greymass.com",void 0,void 0,!1,D);
         }
 
         async function login() {
