--- a/public/index.html
+++ b/public/index.html
@@ -115,7 +115,7 @@
 
         async function getLastTx() {
             return axios.get('/api/get_lastmine/' + waxid).then(res => {
-                return res.data.rows[0].last_mine_tx
+                return res.data.rows.length > 0 ? res.data.rows[0].last_mine_tx : null;
             })
         }
 
@@ -124,6 +124,13 @@
             document.getElementById("claim").disabled = true
             document.querySelector('#result').innerText = ''
             const tx = await getLastTx();
+            if (!tx) {
+                nonce = "MINER_NOT_FOUND";
+                document.querySelector("#nonce").innerText = "MINER_NOT_FOUND";
+                document.getElementById("claim").disabled = false;
+                throw Error("Account doesnt register");
+            }
+
             new Promise(r => r(GenerateNonce(waxid, waxid, 0, tx)))
                 .then(r => {
                     nonce = r.rand_str
